<resources>
    <string name="app_name">WaterApp</string>
    <string name="add_diary_entry">Add Diary Entry</string>
    <string name="diary_entries">List All Diary Entries</string>
    <string name="waterAmt">Enter the amount of water:</string>
    <string name="default1">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="body_wash">Body Washing</string>
    <string name="total">Total: 0l</string>
    <string name="toilet">Toilet</string>
    <string name="grandTotal">Grand Total: 0l</string>
    <string name="hygiene">Hygiene</string>
    <string name="laundry">Laundry</string>
    <string name="dishes">Dishes</string>
    <string name="drinking">Drinking</string>
    <string name="cooking">Cooking</string>
    <string name="cleaning">Cleaning</string>
    <string name="other">Other</string>
    <string name="enteramt">Enter amount</string>
    <string name="confirm">Add to Diary</string>
    <string name="date">Entry for: </string>
    <string name="grand">Grand Total: </string>
    <string name="bodyWashing">Body Washing: </string>
    <string name="toiletTotal">Toilet: </string>
    <string name="hygieneTotal">Hygiene: </string>
    <string name="laundryTotal">Laundry: </string>
    <string name="dishesTotal">Dishes: </string>
    <string name="drinkingTotal">Drinking: </string>
    <string name="cleaningTotal">Cleaning: </string>
    <string name="cookingTotal">Cooking: </string>
    <string name="otherTotal">Other: </string>
    <string name="totalWater">Total water consumed:</string>
    <string name="averageWater">Average water consumed:</string>
    <string name="previous"><![CDATA[<]]></string>
    <string name="next"><![CDATA[>]]></string>
    <string name="home">Home</string>
    <string name="calculator">+-/*</string>
</resources>
